create login & subscription form

--- a/src/App.less
+++ b/src/App.less
@@ -1,10 +1,19 @@
 @import "~antd/dist/antd.less";
 
+.ant-typography, p, label {
+  color: #564e58 !important;
+}
+
 h1.ant-typography {
-  font-size: 18px !important;
+  font-size: 20px !important;
 }
 
 h2.ant-typography {
-  font-size: 13px !important;
-  font-weight: 500 !important;
+  font-size: 17px !important;
+  font-weight: 600 !important;
+}
+
+h3.ant-typography {
+  font-size: 15px !important;
+  font-weight: 600 !important;
 }
