--- a/src/components/containers/layout/layout.less
+++ b/src/components/containers/layout/layout.less
@@ -12,9 +12,12 @@
   color: #f9dec9 !important;
 }
 
+.ant-layout-footer a {
+  color: #f9dec9 !important;
+}
+
 .ant-layout-content {
   min-height: calc(100vh - 133px) !important;
-  color: #564e58;
   line-height: 120px;
   display: flex;
   justify-content: center;
