--- a/src/index.less
+++ b/src/index.less
@@ -4,4 +4,9 @@ html {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif !important; 
  font-weight: 500 !important;
+ color: #564e58 !important;
+}
+
+body {
+   color: @primary-color;
 }
