--- a/src/views/views.less
+++ b/src/views/views.less
@@ -1,10 +1,10 @@
 /* HOME */
-.home-card {
+.custom-card {
   width: 400px !important;
   border-radius: 25px !important;
   color: #564e58 !important;
 }
 
-.home-card h1 {
+.custom-card h1, .custom-card h3 {
   text-align: center;
 }
